[gd_scene load_steps=3 format=3 uid="uid://tlyekoss8265"]

[ext_resource type="Script" path="res://formatSpinBox.gd" id="1_jnjwj"]
[ext_resource type="Script" path="res://seqstep.gd" id="1_wt0xb"]

[node name="StepScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wt0xb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Sequence Step"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "X"

[node name="GridContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Duration:"

[node name="Duration" type="TextEdit" parent="Panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "00:00:00"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select step type:"

[node name="SeqTypeBtnTransition" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Transition"

[node name="SeqTypeBtnFreq" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "New Frequency"

[node name="NewBaseFreq" type="HBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/NewBaseFreq"]
layout_mode = 2
text = "New Base Frequency"

[node name="TextEdit2" type="SpinBox" parent="Panel/VBoxContainer/NewBaseFreq"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10000.0
step = 0.01
value = 130.81
script = ExtResource("1_jnjwj")
format_string = "%.2f"

[node name="NewTargetFreq" type="HBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/NewTargetFreq"]
layout_mode = 2
text = "New Target Brainwave Frequency"

[node name="TextEdit2" type="SpinBox" parent="Panel/VBoxContainer/NewTargetFreq"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10000.0
step = 0.01
value = 9.0
script = ExtResource("1_jnjwj")

[node name="Transition" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Transition to next step"

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="AddButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Add"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
disabled = true
text = "Save"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/SeqTypeBtnTransition" to="." method="_on_seq_type_btn_transition_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/SeqTypeBtnFreq" to="." method="_on_seq_type_btn_freq_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
